--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,66 @@
-.App {
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: sans-serif;
+  background-color: blueviolet;
+}
+
+/* Form */
+
+.container-form {
+  background-color: white;
+  width: 50vw;
+  margin: 0 auto;
+  margin-top: 4rem;
+  border-radius: .7rem;
+  padding: 1.7rem;
+}
+
+.container-form h2 {
+  margin-bottom: 1rem;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.form-group {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  margin-bottom: 1rem;
+}
+
+.form-group label {
+  margin-bottom: .3rem;
+}
+
+.form-group input.input,  .form-group textarea.input{
+  outline: none;
+  padding: 0.5rem .4rem;
+  border: solid 1px rgb(202, 202, 202);
+  border-radius: 0.4rem;
+}
+
+.form-group input.input:focus, .form-group textarea.input:focus {
+  border:  solid 1px blueviolet;
+}
+
+.form-group .input-error {
+  color: red;
+  font-size: .7rem;
+  margin-top: .3rem;
+}
+
+.btn {
+  padding: .7rem 0;
+  width: 100%;
+  background-color: blueviolet;
   color: white;
+  border: none;
+  border-radius: .3rem;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn[disabled] {
+  background-color: gray;
 }
